--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -10,6 +10,15 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+@using (Html.BeginForm())
+{
+    <p>
+        Find book: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table table-hover">
     <tr>
         <th>
@@ -31,9 +40,9 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model)
-{
-    @Html.Partial("_BookDetailsPartial",item)
-}
+    @foreach (var item in Model)
+    {
+        @Html.Partial("_BookDetailsPartial", item)
+    }
 
 </table>
