--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href='@Url.Action("Index","Home")' class = "navbar-brand"><img src="~/img/logo.png" height="30" /></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -28,7 +28,6 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropDownCatalog">
                             <li><a class="dropdown-item" href='@Url.Action("Index", "Book")'>View Books</a></li>
-                            <li><hr class="dropdown-divider"></li>
                             @if (User.Identity.IsAuthenticated)
                             {
                                 <li><a class="dropdown-item" href='@Url.Action("AddByISBN", "Book")'>Auto Add</a></li>
