--- a/Views/Book/Delete.cshtml
+++ b/Views/Book/Delete.cshtml
@@ -7,10 +7,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this book from the catalog?</h3>
 <td>
-    <h4>BookModel</h4>
-    <hr />
+
     <table>
         <td>
             <img src="@Url.Content(Model.CoverImageLocation)" width="150" />
