--- a/Views/MyBooks/AddBookToShelf.cshtml
+++ b/Views/MyBooks/AddBookToShelf.cshtml
@@ -4,9 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AddBookToShelf</h2>
-
-@ViewBag.SuccessfullyAdded
+<h2>Select a book</h2>
 
 @using (Html.BeginForm())
 {
