--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -5,11 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Book details</h2>
+
+<hr/>
 
 <div>
-    <h4>BookModel</h4>
-    <hr />
+   
     <table>
         <td><img src="@Url.Content(Model.CoverImageLocation)" width="150" /></td>
         <td>
