--- a/Views/MyBooks/Index.cshtml
+++ b/Views/MyBooks/Index.cshtml
@@ -43,13 +43,13 @@
             @Html.DisplayNameFor(model => model.BookMark)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LibraryDescription)
+            @Html.DisplayName("Library")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BookshelfDescription)
+            @Html.DisplayName("Bookshelf")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ShelfDescription)
+            @Html.DisplayName("Shelf")
         </th>
         <th></th>
     </tr>
