--- a/Views/MyBooks/UpdateRead.cshtml
+++ b/Views/MyBooks/UpdateRead.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UpdateRead</h2>
+<h2>Update read status</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UpdateReadViewModel</h4>
+        <h4>Mark a book as read or add a bookmark</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.OwnershipId)
