--- a/Views/Shelf/Index.cshtml
+++ b/Views/Shelf/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Shelfs in your bookshelf</h2>
+<h2>Shelves in your bookshelf</h2>
 
 <p>
     <a href='@Url.Action("Add","Shelf",new { bookshelfId = Guid.Parse(Request.QueryString["bookshelfId"]) })' class="btn btn-primary btn-sm" type="button">&#x2B Add shelf</a>
